# streamlit-ad-app

./: .dockerignore  .flake8  .gitignore  CLOUD_RUN_SETUP.md  DEBUG_INSTRUCTIONS.md  Dockerfile  Dockerfile.cloudrun  README.md  cloud-run.yaml  debug_model_load.py  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  security_test_manual.md
.github/workflows/: ci.yml  deploy-ec2-disabled.yml  deploy.yml
.serena/: project.yml
.serena/memories/: ai_architecture_details.md  code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: generated_code.py  main.py  main_original.py
app/security/: __init__.py  crypto_utils.py  session_manager.py  session_state.py
app/utils/: __init__.py  code_executor.py  code_generator.py  template_prompt.py
docs/: CLOUD_RUN_SETUP.md  cloud-run-setup.md  debug-instructions.md  development-flow.md  project-overview.md  security-audit-report.md  セキュリティインシデント報告書.md
tests/: __init__.py  conftest.py  test_code_executor.py  test_code_generator.py  test_security_isolation.py
